- blur created white space around video, fixed with transform in blur layer

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -75,5 +75,6 @@
     overflow: hidden;
     z-index: -2;
     filter: blur(5px);
+    transform: scale(1.02);
 }
 
